# task2

./: .gitignore  Makefile  README.md  crud.py  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  task.md
alembic/: env.py
alembic/versions/: 2024_05_15_2238-50b03881dff6_create_students_table.py  2024_05_15_2244-af89fb135cd7_update_students_table_name.py  2024_05_15_2257-c3db6a5c0fb3_create_students_and_groups_tables.py  2024_05_15_2303-785fe198c50c_create_relationship.py
api/v1/: __init__.py
api/v1/groups/: crud.py  dependencies.py  schemas.py  views.py
api/v1/students/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  group.py  student.py
db/: db.sqlite3
doc/: class.d2  tables.d2
