[tool.poetry]
name = "fastapi-tutor"
version = "0.1.0"
description = ""
authors = ["Arseniy <yarmolinskiyam@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
black = "^24.4.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aisqlite = "^1.1.0"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
